Minor adding bg color in css

--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -15,6 +15,7 @@
 	right: 0px;
 	top: 0px;
 	height: 100%;
+	//background: #e6eaed;
 
 	.cms-panel-toggle a {
 		text-align: left;
@@ -108,7 +109,7 @@
 	.rightsidebar {
 		width: 286px;
 		border-right: none;
-		background: none;
+		background: #e6eaed;
 		border-left: 1px solid #d0d3d5;
 		position: absolute;
 		height: auto;
