--- a/css/cms.css
+++ b/css/cms.css
@@ -1,6 +1,9 @@
 /**
  * CMS Styles
  */
+/**
+ * Include Compass framework
+ */
 /* full screen sidebar (pushes tabs to the left) */
 .rightsidebar {
   width: 280px;
@@ -74,7 +77,7 @@
 .rightsidebar-inner .rightsidebar-leftcol .rightsidebar {
   width: 286px;
   border-right: none;
-  background: none;
+  background: #e6eaed;
   border-left: 1px solid #d0d3d5;
   position: absolute;
   height: auto;
