--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -10,7 +10,7 @@
 .rightsidebar {
 	width: 280px;
 	border-right: none;
-	border-left: 1px solid #C0C0C2;
+	border-left: 1px solid #c1c7cc;
 	position: absolute;
 	right: 0px;
 	top: 0px;
@@ -82,7 +82,7 @@
 					}
 				}
 			}
-			
+
 			label.right {
 				margin: 4px 0 0 2px;
 			}
@@ -105,28 +105,27 @@
 /* in-tab sidebar */
 .rightsidebar-inner .rightsidebar-leftcol {
 	padding-right: 280px;
-	
+
 	.rightsidebar {
 		width: 286px;
 		border-right: none;
-		background: #e6eaed;
-		border-left: 1px solid #d0d3d5;
+		border-left: 1px solid #c1c7cc;
 		position: absolute;
 		height: auto;
 		min-height: 100%;
 		box-shadow: none;
 		top: 77px;
 		right: 0px;
-		
+
 		.cms-panel-content {
 			padding: 0 14px 14px 14px;
-			//border-left: 1px solid #d0d3d5;
+			//border-left: 1px solid #d2d5d8;
 		}
-		
+
 		h3.cms-panel-header {
 			padding-bottom: 10px;
 		}
-		
+
 		.cms-panel-content-collapsed, .cms-panel-toggle.south { display: none; }
 	}
 }
