--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -15,7 +15,7 @@
 	right: 0px;
 	top: 0px;
 	height: 100%;
-	//background: #e6eaed;
+	background-color: #f7f8fa;
 
 	.cms-panel-toggle a {
 		text-align: left;
@@ -47,6 +47,19 @@
 				}
 			}
 		}
+	}
+
+	.CompositeField.rightsidebar .form__fieldgroup {
+	    bottom: auto!important;
+	    height: 100%!important;
+	    padding: 0 !important;
+	    margin: 0!important;
+	    padding-left: 30px!important;
+	    width: auto!important;
+	    max-width: 100%!important;
+	    flex: 0 0 0!important;
+	    padding-top: 30px!important;
+	    border-left: none;
 	}
 
 	.cms-content-view {
