--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -14,8 +14,9 @@
 	position: absolute;
 	right: 0px;
 	top: 0px;
-	height: 100%;
+	height: 100%!important;
 	background-color: #f7f8fa;
+	display: block!important;
 
 	.cms-panel-toggle a {
 		text-align: left;
