css updates - fixes for internal container <div> width

--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -56,11 +56,12 @@
 	    padding: 0 !important;
 	    margin: 0!important;
 	    padding-left: 30px!important;
-	    width: auto!important;
+	    width: 250px!important;
 	    max-width: 100%!important;
 	    flex: 0 0 0!important;
 	    padding-top: 30px!important;
 	    border-left: none;
+			word-wrap: break-word;
 	}
 
 	.cms-content-view {
