--- a/css/cms.css
+++ b/css/cms.css
@@ -15,6 +15,7 @@
   height: 100%!important;
   background-color: #f7f8fa;
   display: block!important;
+  z-index: 10!important;
 }
 
 .CompositeField.rightsidebar .form__fieldgroup {
