--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -17,6 +17,7 @@
 	height: 100%!important;
 	background-color: #f7f8fa;
 	display: block!important;
+	z-index: 10!important;
 
 	.cms-panel-toggle a {
 		text-align: left;
