--- a/scss/cms.scss
+++ b/scss/cms.scss
@@ -118,6 +118,10 @@
 	}
 }
 
+.rightsidebar + .form-group {
+	margin-right: 260px;
+}
+
 /* in-tab sidebar */
 .rightsidebar-inner .rightsidebar-leftcol {
 	padding-right: 280px;
